--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,9 @@ spring.sleuth.sampler.percentage=1.0
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.enabled=true
 spring.zipkin.sender.type=web
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://149.28.141.129:3306/techtalks2022
+spring.datasource.username=techtalks2022
+spring.datasource.password=Ascend@techtalks2022
